--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </div>
 
 <div class="footer">
-    <h2>Questions? call 1-844-505-2993</h2>
+    <h2>Questions? call 000-000-0000</h2>
     <div class="row">
         <div class="col">
             <a href="#">FAQ</a>
