--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="header">
     <nav>
-        <img src="images/logo.png" alt="Placeholder Logo">
+        <img src="images/logo.png" class="logo">
         <div>
             <button class="language-btn">English <img src="images/logo.png"> </button>
             <button>Sign In</button>
